leptos_macro/tests/ui/view/events.stderr
error[E0593]: closure is expected to take 1 argument, but it takes 0 arguments
 --> tests/ui/view/events.rs:8:20
  |
8 |         <Component on:click=|| {} />
  |                    ^^^^^^^^ -- takes 0 arguments
  |                    |
  |                    expected closure that takes 1 argument
  |
help: consider changing the closure to take and ignore the expected argument
  |
8 |         <Component on:click=|_| {} />
  |                             ~~~
