leptos_macro/tests/ui/view/events.rs
use leptos::*;

#[component]
fn Component() -> impl IntoView {}

fn main() {
    view! {
        <Component on:click=|| {} />
    };
}
